--- a/javascript/package.json
+++ b/javascript/package.json
@@ -3,7 +3,7 @@
   "version": "1.84.0",
   "description": "Svix webhooks API client and webhook verification library",
   "author": "svix",
-  "repository": "https://github.com/svix/svix-libs",
+  "repository": "https://github.com/svix/svix-webhooks",
   "type": "commonjs",
   "keywords": [
     "svix",
