--- a/python/requirements-dev.txt
+++ b/python/requirements-dev.txt
@@ -56,7 +56,7 @@ pytest==8.3.3
     #   pytest-docker
 pytest-docker==3.1.1
     # via -r requirements.in/development.txt
-pytest-httpserver==1.1.0
+pytest-httpserver==1.1.3
     # via -r requirements.in/development.txt
 requests==2.32.5
     # via -r requirements.in/development.txt
@@ -74,7 +74,9 @@ urllib3==2.5.0
     # via
     #   requests
     #   types-requests
-werkzeug==3.1.4
-    # via pytest-httpserver
+werkzeug==3.1.5
+    # via
+    #   -r requirements.in/development.txt
+    #   pytest-httpserver
 wheel==0.44.0
     # via pip-tools
