--- a/deny.toml
+++ b/deny.toml
@@ -20,7 +20,9 @@ ignore = [
     # rustls-pemfile is unmaintained, but we only use it for parsing system
     # certificates. This is not a serious attack vector for our use case.
     # TODO: Upgrade rustls-native-certs to 0.8.x to get rid of this.
-    "RUSTSEC-2025-0134"
+    "RUSTSEC-2025-0134",
+    # bincode (depended on by deno) is unmaintained
+    "RUSTSEC-2025-0141"
 ]
 
 [licenses]
