js: Clean up includes and excludes in tsconfigs
We had a lot of excludes that were no-ops because the files matched by
them were never included in the first place.

--- a/javascript/tsconfig.json
+++ b/javascript/tsconfig.json
@@ -20,14 +20,10 @@
     "noLib": false,
     "lib": ["es6", "dom"]
   },
-  "exclude": [
-    "dist",
-    "test_build",
-    "node_modules",
-    "templates",
-    "jest.config.js",
-    "src/**/*.test.ts",
-    "eslint.config.mjs"
+  "include": [
+    "src/**/*.ts"
   ],
-  "filesGlob": ["./src/**/*.ts"]
+  "exclude": [
+    "src/**/*.test.ts"
+  ],
 }
