--- a/.github/workflows/server-release.yml
+++ b/.github/workflows/server-release.yml
@@ -56,11 +56,12 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Derive Version Numbers
+        id: gen_docker_tags
         run: |
           export REPO="${{ secrets.DOCKERHUB_USERNAME }}/svix-server"
           export GIT_TAG="$(git describe --tags --abbrev=0)"
           export DOCKER_TAGS=$(echo "${GIT_TAG}" | sed -E "s#v([0-9]+)\.([0-9]+)\.([0-9]+)#${REPO}:latest,${REPO}:v\1.\2.\3,${REPO}:v\1.\2,${REPO}:v\1#")
-          echo "DOCKER_TAGS=${DOCKER_TAGS}" >> "$GITHUB_ENV"
+          echo "docker_tags=${DOCKER_TAGS}" >> "$GITHUB_OUTPUT"
           echo "Generated Tags: ${DOCKER_TAGS}"
 
       - name: Build Docker image
@@ -69,7 +70,7 @@ jobs:
           context: ./server
           file: ./server/Dockerfile
           push: false
-          tags: ${{ env.DOCKER_TAGS }}
+          tags: ${{ steps.gen_docker_tags.docker_tags }}
           platforms: linux/amd64
           load: true
 
@@ -77,7 +78,7 @@ jobs:
         id: scan
         uses: anchore/scan-action@v6
         with:
-          image: "${{ env.DOCKER_TAGS }}"
+          image: "${{ steps.gen_docker_tags.docker_tags }}"
           fail-build: true
           severity-cutoff: high
           only-fixed: true
@@ -93,5 +94,5 @@ jobs:
           context: ./server
           file: ./server/Dockerfile
           push: true
-          tags: ${{ env.DOCKER_TAGS }}
+          tags: ${{ steps.gen_docker_tags.docker_tags }}
           platforms: linux/amd64,linux/arm64
